--- a/featureshow/org-mode-teaser.org
+++ b/featureshow/org-mode-teaser.org
@@ -545,6 +545,15 @@ I can not finish this task as long as I did not enjoy my new clothes.
 ***** DONE subtask 1
 ***** TODO subtask 2
 ***** TODO subtask 3
+
+** inline display of images (and PDF files)
+
+- ~C-c C-x C-v~ =org-toggle-inline-images=
+
+[[file:org-mode-logo_283x283.png]]
+
+[[file:org-mode-teaser.pdf]]
+
 ** tags [[http://orgmode.org/org.html#Tags][(docu)]]
 
 - inherited tags
